<resources>
    <string name="app_name">QuickPool</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="valtitulologin">Quickpool</string>
    <string name="valetusuario">Ingrese su usuario</string>
    <string name="valetpassword">Ingrese su contraseña</string>
    <string name="valbtnlogin">Iniciar Sesión</string>
    <string name="valbtnregistrar">Crear Cuenta</string>
    <string name="valchkguardardatos">Recordar</string>
    <string name="valtituloregistro">Registrarme</string>
    <string name="valetnomusuario">Ingrese su nombre</string>
    <string name="valetapeusuario">Ingrese su apellido</string>
    <string name="valetemailcliente">Ingrese su email</string>
    <string name="valetcelusuario">Ingrese su celular</string>
    <string name="valetemailusuario">Ingrese su email</string>
    <string name="valetusureg">Ingrese su usuario</string>
    <string name="valetpassreg">Ingrese su password</string>
    <string name="valetrepassreg">Vuelva a ingresar su password</string>
    <string name="valbtnregistro">REGISTRAR USUARIO</string>
    <string name="valbtnirlogin">VOLVER A LOGIN</string>
    <string name="valbtmas">+</string>
    <string name="valbtmenos">-</string>
</resources>